k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcappexemplo
  namespace: app-py
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: appexemplo
  sessionAffinity: None
  type: ClusterIP
